// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Billing Summary should render correctly for a paid plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Change Plan",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={true}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": false,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY
    data-id="billing-panel"
    title="Billing"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        label="Credit Card"
      />
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
  />
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;

exports[`Component: Billing Summary should render correctly for a standard free plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={false}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
  />
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't buy IPs 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={false}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY
    data-id="billing-panel"
    title="Billing"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        label="Credit Card"
      />
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
  />
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't change your plan 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={Array []}
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={true}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY
    data-id="billing-panel"
    title="Billing"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        label="Credit Card"
      />
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
  />
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;

exports[`Component: Billing Summary should render correctly if you can't update your billing info 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={true}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
  />
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;

exports[`Component: Billing Summary should render with IP modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={true}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY
    data-id="billing-panel"
    title="Billing"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        label="Credit Card"
      />
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={true}
  >
    <AddIpsForm
      onClose={[Function]}
    />
  </Modal.LEGACY>
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;

exports[`Component: Billing Summary should render with the billing contact modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={true}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY
    data-id="billing-panel"
    title="Billing"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        label="Credit Card"
      />
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={true}
  >
    <UpdateContactForm
      onCancel={[Function]}
    />
  </Modal.LEGACY>
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;

exports[`Component: Billing Summary should render with the payment info modal open 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={true}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY
    data-id="billing-panel"
    title="Billing"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        label="Credit Card"
      />
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={true}
  >
    <UpdatePaymentForm
      onCancel={[Function]}
    />
  </Modal.LEGACY>
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;

exports[`Component: Billing Summary should show the invoice history if there are invoices 1`] = `
<div>
  <PendingPlanBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
  />
  <FreePlanWarningBanner
    account={
      Object {
        "billing": Object {},
        "cancelLoading": false,
        "rvUsage": Object {
          "recipient_validation": Object {
            "month": Object {
              "used": 123123,
            },
            "timestamp": "2019-06-10T00:00:00.000Z",
          },
        },
        "subscription": Object {
          "plan_volume": 15000,
        },
      }
    }
    accountAgeInDays={5}
  />
  <Panel.LEGACY
    accent={true}
    title="Plan Overview"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "Component": [Function],
            "color": "orange",
            "content": "Upgrade Now",
            "to": "/account/billing/plan",
          },
        ]
      }
    >
      <LabelledValue
        label="Your Plan"
      >
        <PlanSummary
          plan={
            Object {
              "plan_volume": 15000,
            }
          }
        />
      </LabelledValue>
    </Panel.LEGACY.Section>
    <DedicatedIpSummarySection
      canPurchaseIps={true}
      count={0}
      isTransitioningToSelfServe={false}
      onClick={[Function]}
      plan={
        Object {
          "isFree": true,
        }
      }
    />
    <Panel.LEGACY.Section>
      <LabelledValue
        label="Recipient Validation"
      >
        <h6>
          <Text
            as="span"
            fontSize="300"
          >
            123,123
             emails validated for 
            $599.37
            <Text
              as="span"
              fontWeight="200"
            >
               
              as of 
              Jun 9 2019, 8:00pm
            </Text>
          </Text>
        </h6>
        <ButtonLink
          onClick={[Function]}
        >
          How was this calculated?
        </ButtonLink>
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Panel.LEGACY
    data-id="billing-panel"
    title="Billing"
  >
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Payment Information",
            "onClick": [Function],
          },
        ]
      }
    >
      <CardSummary
        label="Credit Card"
      />
    </Panel.LEGACY.Section>
    <Panel.LEGACY.Section
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Update Billing Contact",
            "onClick": [Function],
          },
        ]
      }
    >
      <LabelledValue
        label="Billing Contact"
      >
        <h6>
           
        </h6>
        <p />
      </LabelledValue>
    </Panel.LEGACY.Section>
  </Panel.LEGACY>
  <Component
    invoices={
      Array [
        "an invoice",
        "another invoice",
      ]
    }
  />
  <PremiumBanner />
  <EnterpriseBanner />
  <Modal.LEGACY
    onClose={[Function]}
    open={false}
  />
  <OGOnlyWrapper
    as={[Function]}
    onClose={[Function]}
    open={false}
  >
    <Box
      as={[Function]}
      onClose={[Function]}
      open={false}
      showCloseButton={true}
    >
      <_default
        onClose={[Function]}
        volumeUsed={123123}
      />
    </Box>
  </OGOnlyWrapper>
</div>
`;
